--- a/Frontend/news-for-you/src/App.css
+++ b/Frontend/news-for-you/src/App.css
@@ -57,6 +57,15 @@ input.ant-input , .login-input input{
 .user-profile:hover {
   background-color: aquamarine;
 }
+.cancel-button {
+  background-color: #ffdede;
+  font-family: 'Montserrat', sans-serif !important;
+  font-size: 16px;
+  transition: all 0.2s ease-in-out;
+}
+.cancel-button:hover {
+  background-color: #ffb6b6;
+}
 .filter-card {
   border-radius: 0px;
   height: 100%;
